<resources>
    <string name="app_name">NewsApplication</string>

    <string name="news_body_text">News Text Here News Text Here News Text Here News Text
        Here News Text Here News Text Here News Text Here News Text Here News Text Here
        NewsText Here News Text Here NewsText Here News Text Here News Text Here News Text
        Here News Text Here News Text Here News Text Here News Text Here News Text Here News
        Text Here News Text Here </string>
    <string name="menu_news_feeds">Feeds</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="select_your_application_style">Select Your Application Style</string>
    <string name="settings_title_content_language">Content Language</string>
    <string name="settings_title_country">Your Country</string>
    <string name="settings_title_app_style">Application Style</string>
    <string name="settings_title_ratting_app">Ratting This App</string>
    <string name="settings_title_more_apps">More Application</string>
    <string name="settings_title_contact_us">Contact Us</string>
    <string name="settings_title_version">Version</string>
    <string name="style_follow_system">Follow System</string>
    <string name="lang_en">English</string>
    <string name="lang_ar">Arabic</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="style_auto">Auto</string>
    <string name="next_but_title">Next</string>
    <string name="content_lang_dialog_title">News Content Language</string>
    <string name="save_lang_dialog_but">Save</string>
    <string name="cancel_lang_dialog_but">Cancel</string>
    <string name="select_style_dialog_button">Select</string>
    <string name="cancel_style_dialog_but">Cancel</string>

    <string-array name="NewsContentLanguage">
        <item>Arabic</item>
        <item>English</item>
    </string-array>

    <string-array name="AppStyles">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto (Follow System)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_archive">Archive</string>
    <string name="not_found_any_news_saved">Not Found Any News Saved</string>
    <string name="notes_long_press_to_any_news_card_to_save">Notes: Long Press To any News Card To Save</string>
    <string name="news_page">News Page</string>

</resources>