<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mainListNewsFragment"
        android:icon="@drawable/ic_outline_rss_feed"
        android:enabled="true"
        android:title="@string/menu_news_feeds"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/archiveNewsFragment"
        android:icon="@drawable/ic_baseline_archive_24"
        android:enabled="true"
        android:title="@string/menu_archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchNewsFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:enabled="true"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings"
        android:enabled="true"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />

</menu>
